@@ -1,5 +1,8 @@
 2013-01-09  Andy Buckley  <andy.buckley@cern.ch>
 
+	* Adding more constructors for PDFGrid, calling the new ones on
+	PDF to populate the Info class.
+
 	* Adding the EXAMPLEPDF directory for testing.
 
 2013-01-08  Andy Buckley  <andy.buckley@cern.ch>
